@@ -80,6 +80,7 @@ Release 0.19.0 - Unreleased
    HBASE-910   Scanner misses columns / rows when the scanner is obtained
                durring a memcache flush
    HBASE-1009  Master stuck in loop wanting to assign but regions are closing
+   HBASE-1016  Fix example in javadoc overvie
       
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
